added degrade to background

--- a/src/Components/Homepage/Header/header.module.css
+++ b/src/Components/Homepage/Header/header.module.css
@@ -1,6 +1,8 @@
 .headerContent {
     display: flex;
     justify-content: space-between;
+    background-color: black;
+    color: #f9d200;
 }
     ul {
         display: flex;
