--- a/src/Components/Homepage/Header/header.module.css
+++ b/src/Components/Homepage/Header/header.module.css
@@ -1,8 +1,10 @@
 .headerContent {
     display: flex;
     justify-content: space-between;
-    background-color: black;
-    color: #f9d200;
+    position: sticky;
+    padding: 2rem;
+    background: black;
+    color: #d6b400;
 }
     ul {
         display: flex;
