--- a/src/Components/Homepage/WhoWeAre/presentation.module.css
+++ b/src/Components/Homepage/WhoWeAre/presentation.module.css
@@ -1,9 +1,33 @@
 .presentationContainer {
     display: flex;
     justify-content: space-around;
+    color: #d6b400;
+    background-image:url('./img/plexus.gif');
     background-color: #090909;
-    color: #f9d200;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 90vh;
 }
-    .title {
-        font-size: larger;
+    .presentationShadowEffect{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: #090909af;
     }
+        .title {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 4rem;
+        }
+        .infoW {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 1rem 2rem 1rem 2rem;
+        }
+        .calculatorBtn {
+            padding-top: 4vh;
+        }   
