added color to the bottom of the header

--- a/src/Components/Homepage/Header/header.module.css
+++ b/src/Components/Homepage/Header/header.module.css
@@ -6,6 +6,7 @@
     position: fixed;
     width: 100%;
     background-color: black;
+    border-bottom: 1px groove #d6b400;
     transition: .3s ease-in;
 }
     .headerContent {
