--- a/src/Components/Homepage/Header/header.module.css
+++ b/src/Components/Homepage/Header/header.module.css
@@ -13,6 +13,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-direction: row-reverse;
         padding: 2rem;
         color: #d6b400;
     }
@@ -31,7 +32,10 @@
                     padding: 0 2vw 0 2vw;
                 }
     @media only screen and (min-width: 992px) {
-        .navLinks{
-            display:block;
+        .headerContent {
+            flex-direction: row;
         }
+            .navLinks{
+                display:block;
+            }
     }
