--- a/src/Components/Shared/Button/button.module.css
+++ b/src/Components/Shared/Button/button.module.css
@@ -81,6 +81,14 @@
   cursor: pointer;
 }
 
+.close {
+  margin: 2rem;
+  color:#d6b400;
+  border-radius: 1%;
+  background: none;
+  cursor: pointer;
+}
+
 @media only screen and (min-width: 992px) {
   .bars {
     display: none;
