--- a/src/Components/Homepage/Calculator/calculator.module.css
+++ b/src/Components/Homepage/Calculator/calculator.module.css
@@ -9,20 +9,20 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.212);
+    background-color: rgba(0, 0, 0, 0.904);
   }
   
   .calculatorContainer {
     position: relative;
     width: 50%;
-    top: 20vh;
-    margin-bottom: 50px;
+    top: 10vh;
+    margin-bottom: 10vh;
     border-radius: 12px;
     background-color: #f0f4f9;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     display: flex;
     flex-direction: column;
-    padding: 25px;
+    padding: 1rem;
   }
   
   .calculatorContainer .title {
@@ -31,16 +31,23 @@
     margin-top: 10px;
   }
   
-  .titleCloseBtn {
+  .closeBtn {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
   }
   
-  .titleCloseBtn button {
+  .closeBtn button {
     background-color: transparent;
     border: none;
-    font-size: 25px;
     cursor: pointer;
+  }
+
+  .title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.4rem;
+    font-weight: bolder;
   }
   
   .calculatorContainer .body {
@@ -70,12 +77,10 @@
     font-size: 20px;
     cursor: pointer;
   }
-  
-  #cancelBtn {
-    background-color: #dc3545;
+  .calculator {
+    display: flex;
+    justify-content: center;
+    margin-right: 1rem;
+    
+
   }
-  
-  .close {
-    cursor: pointer;
-  }
-  
