--- a/src/Components/Homepage/NftInformation/nft-info.module.css
+++ b/src/Components/Homepage/NftInformation/nft-info.module.css
@@ -21,13 +21,23 @@
             justify-content: center;
             align-items: center;
             font-size: 4rem;
+            color: transparent;
+            -webkit-text-stroke: #d6b400 2px;
+            text-transform: uppercase;
         }
         .infoNft {
             display: flex;
             justify-content: center;
             align-items: center;
+            -webkit-text-stroke: #d6b400 1px;
             margin: 1rem 2rem 1rem 2rem;
         }
         .nftBtn {
             padding-top: 4vh;
         }   
+            .moreInfoBtn {
+               background-color:#d6b400;
+               border-style: none; 
+               border-radius: 10%;
+               cursor: pointer;
+            }
