--- a/src/Components/Homepage/WhoWeAre/presentation.module.css
+++ b/src/Components/Homepage/WhoWeAre/presentation.module.css
@@ -21,11 +21,15 @@
             justify-content: center;
             align-items: center;
             font-size: 4rem;
+            color: transparent;
+            -webkit-text-stroke: #d6b400 2px;
+            text-transform: uppercase;
         }
         .infoW {
             display: flex;
             justify-content: center;
             align-items: center;
+            -webkit-text-stroke: #d6b400 1px;
             margin: 1rem 2rem 1rem 2rem;
         }
         .calculatorBtn {
