--- a/src/Components/Homepage/NftInformation/nft-info.module.css
+++ b/src/Components/Homepage/NftInformation/nft-info.module.css
@@ -15,23 +15,23 @@
         align-items: center;
         flex-direction: column;
         background-color: #090909af;
-    }
-        .title {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 4rem;
-            color: transparent;
-            -webkit-text-stroke: #d6b400 2px;
-            text-transform: uppercase;
-        }
-        .infoNft {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            -webkit-text-stroke: #d6b400 1px;
-            margin: 1rem 2rem 1rem 2rem;
-        }
+    } 
+            .title {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size: 3rem;
+                color: transparent;
+                -webkit-text-stroke: #d6b400 2px;
+                text-transform: uppercase;
+            }
+            .infoNft {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                -webkit-text-stroke: #d6b400 1px;
+                margin: 1rem 2rem 1rem 2rem;
+            }
         .nftBtn {
             padding-top: 4vh;
         }   
@@ -40,4 +40,12 @@
                border-style: none; 
                border-radius: 10%;
                cursor: pointer;
+               box-shadow: 0 0 10px #d6b400, 0 0 40px #d6b400, 0 0 80px #d6b400;
+               animation: blinkButton 1s infinite;
+            }
+
+            @keyframes blinkButton {
+                0%{opacity: 0.1}
+                100%{opacity:2;
+                text-shadow: 1px 0px 30px #d6b400}
             }
