added min-height to the component

--- a/src/Components/Shared/Footer/footer.module.css
+++ b/src/Components/Shared/Footer/footer.module.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     padding: 5vh;
     color: #d6b400;
-    background-color: #090909;
+    background-color: black;
 }
     .logo {
         height:10vh;
