--- a/src/Components/Homepage/Header/header.module.css
+++ b/src/Components/Homepage/Header/header.module.css
@@ -30,6 +30,7 @@
             }
                 li {
                     padding: 0 2vw 0 2vw;
+                    cursor:pointer
                 }
     @media only screen and (min-width: 992px) {
         .headerContent {
