--- a/src/Components/Homepage/Header/header.module.css
+++ b/src/Components/Homepage/Header/header.module.css
@@ -29,8 +29,13 @@
                 display: flex;
             }
                 li {
-                    padding: 0 2vw 0 2vw;
-                    cursor:pointer
+                    padding: 0 2vw 0vw 2vw;
+                    -webkit-text-stroke: #d6b400 1px;
+                    cursor:pointer;
+                }
+                li :hover{
+                    padding-bottom: 1vh;
+                    border-bottom: 3px solid #d6b400;
                 }
     @media only screen and (min-width: 992px) {
         .headerContent {
