--- a/src/Components/Homepage/NftInformation/nft-info.module.css
+++ b/src/Components/Homepage/NftInformation/nft-info.module.css
@@ -35,17 +35,40 @@
         .nftBtn {
             padding-top: 4vh;
         }   
-            .moreInfoBtn {
-               background-color:#d6b400;
-               border-style: none; 
-               border-radius: 10%;
-               cursor: pointer;
-               box-shadow: 0 0 10px #d6b400, 0 0 40px #d6b400, 0 0 80px #d6b400;
-               animation: blinkButton 1s infinite;
-            }
-
-            @keyframes blinkButton {
-                0%{opacity: 0.1}
-                100%{opacity:2;
-                text-shadow: 1px 0px 30px #d6b400}
-            }
+        .moreInfoBtn {
+            --gold: #d6b400;
+            font-size: 15px;
+            padding: 0.7em 2.7em;
+            letter-spacing: 0.06em;
+            position: relative;
+            font-family: inherit;
+            border-radius: 0.6em;
+            overflow: hidden;
+            transition: all 0.3s;
+            line-height: 1.4em;
+            border: 2px solid var(--gold);
+            background: linear-gradient(to right, #fdda2b2a 1%, transparent 40%,transparent 60% , #fdda2b2a 100%);
+            color: var(--gold);
+            box-shadow: inset 0 0 10px #fdda2b2a, 0 0 9px 3px #fdd9242a;
+           }
+           
+           .moreInfoBtn:hover {
+            color: #fae164;
+            box-shadow: inset 0 0 10px #fdda2b9a, 0 0 9px 3px #fdd9242a;
+           }
+           
+           .moreInfoBtn:before {
+            content: "";
+            position: absolute;
+            left: -4em;
+            width: 4em;
+            height: 100%;
+            top: 0;
+            transition: transform .4s ease-in-out;
+            background: linear-gradient(to right, transparent 1%, #fdd9242a 40%,#fdd9242a 60% , transparent 100%);
+           }
+           
+           .moreInfoBtn:hover:before {
+            transform: translateX(15em);
+           }
+               
