--- a/src/Components/Homepage/NftInformation/nft-info.module.css
+++ b/src/Components/Homepage/NftInformation/nft-info.module.css
@@ -50,6 +50,7 @@
             background: linear-gradient(to right, #fdda2b2a 1%, transparent 40%,transparent 60% , #fdda2b2a 100%);
             color: var(--gold);
             box-shadow: inset 0 0 10px #fdda2b2a, 0 0 9px 3px #fdd9242a;
+            cursor: pointer;
            }
            
            .moreInfoBtn:hover {
