--- a/src/Components/NftEducation/NftUseCases/nft-use.module.css
+++ b/src/Components/NftEducation/NftUseCases/nft-use.module.css
@@ -1,3 +1,11 @@
 .nftUseContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column-reverse;
     min-height: 100vh;
+}
+.logo {
+    height: 30vh;
+    width: 30vh;
 }
