--- a/src/Components/NftEducation/Ownership/ownership.module.css
+++ b/src/Components/NftEducation/Ownership/ownership.module.css
@@ -1,3 +1,12 @@
 .ownershipContainer {
-    min-height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column-reverse;
+    min-height: 100vh;
+}
+
+.logo {
+    height: 30vh;
+    width: 30vh;
 }
