--- a/src/Components/NftEducation/Security/security.module.css
+++ b/src/Components/NftEducation/Security/security.module.css
@@ -1,3 +1,11 @@
 .securityContainer {
-    min-height:100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column-reverse;
+    min-height: 100vh;
+}
+.logo {
+    height: 30vh;
+    width: 30vh;
 }
