--- a/src/Components/Shared/Button/button.module.css
+++ b/src/Components/Shared/Button/button.module.css
@@ -89,6 +89,43 @@
   cursor: pointer;
 }
 
+.more {
+  --gold: #d6b400;
+  font-size: 15px;
+  padding: 0.7em 2.7em;
+  letter-spacing: 0.06em;
+  font-family: inherit;
+  border-radius: 0.6em;
+  overflow: hidden;
+  transition: all 0.3s;
+  line-height: 1.4em;
+  border: 2px solid var(--gold);
+  background: linear-gradient(to right, #fdda2b2a 1%, transparent 40%,transparent 60% , #fdda2b2a 100%);
+  color: var(--gold);
+  box-shadow: inset 0 0 10px #fdda2b2a, 0 0 9px 3px #fdd9242a;
+  cursor: pointer;
+ }
+ 
+  .more:hover {
+    color: #fae164;
+    box-shadow: inset 0 0 10px #fdda2b9a, 0 0 9px 3px #fdd9242a;
+  }
+  
+  .more:before {
+    content: "";
+    position: absolute;
+    left: -4em;
+    width: 4em;
+    height: 100%;
+    top: 0;
+    transition: transform .4s ease-in-out;
+    background: linear-gradient(to right, transparent 1%, #fdd9242a 40%,#fdd9242a 60% , transparent 100%);
+  }
+  
+  .more:hover:before {
+    transform: translateX(15em);
+  }
+
 @media only screen and (min-width: 992px) {
   .bars {
     display: none;
