--- a/src/Components/Homepage/NftInformation/nft-info.module.css
+++ b/src/Components/Homepage/NftInformation/nft-info.module.css
@@ -2,11 +2,8 @@
     display: flex;
     justify-content: space-around;
     color: #d6b400;
-    background-image:url('./img/ROBDVO4PFNFULOLBIK3DGUO5KQ.jpg');
     background-color: #090909;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    border-top: 2px solid #d6b400;
     min-height: 90vh;
 }
     .nftShadowEffect{
@@ -14,7 +11,6 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        background-color: #090909af;
     } 
             .title {
                 display: flex;
@@ -32,8 +28,49 @@
                 -webkit-text-stroke: #d6b400 1px;
                 margin: 1rem 2rem 1rem 2rem;
             }
-        .nftBtn {
-            padding-top: 4vh;
-        }   
+            .educationCard {
+                --glow-color: #ffef9f;
+                --glow-spread-color: #ffe97c;
+                --btn-color: #d6b400;
+                border: .25em solid var(--glow-color);
+                margin-top: 5rem;
+                padding: 1em 3em;
+                color: var(--glow-color);
+                font-size: 15px;
+                font-weight: bold;
+                background-color: var(--btn-color);
+                border-radius: 1em;
+                outline: none;
+                box-shadow: 0 0 1em .25em var(--glow-color),
+                       0 0 4em 1em var(--glow-spread-color),
+                       inset 0 0 .75em .25em var(--glow-color);
+                text-shadow: 0 0 .5em var(--glow-color);
+                transition: all 0.3s;
+               }
+               
+               .educationCard::after {
+                pointer-events: none;
+                content: "";
+                position: absolute;
+                top: 120%;
+                left: 0;
+                height: 100%;
+                width: 100%;
+                opacity: .7;
+                transform: perspective(1.5em) rotateX(35deg) scale(1, .6);
+                }
+                
+                .educationCard:hover {
+                    color: var(--btn-color);
+                    background-color: var(--glow-color);
+                    box-shadow: 0 0 1em .25em var(--glow-color),
+                           0 0 4em 2em var(--glow-spread-color),
+                           inset 0 0 .75em .25em var(--glow-color);
+                }
+                .logo {
+                    height: 30vh;
+                    width: 30vh;
+                }
+        
         
                
