--- a/src/Components/Homepage/NftInformation/nft-info.module.css
+++ b/src/Components/Homepage/NftInformation/nft-info.module.css
@@ -16,6 +16,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                margin-top: 20vh;
                 font-size: 3rem;
                 color: transparent;
                 -webkit-text-stroke: #d6b400 2px;
