--- a/src/Components/Homepage/NftInformation/nft-info.module.css
+++ b/src/Components/Homepage/NftInformation/nft-info.module.css
@@ -51,6 +51,7 @@
                        inset 0 0 .75em .25em var(--glow-color);
                 text-shadow: 0 0 .5em var(--glow-color);
                 transition: all 0.3s;
+                transition-timing-function: ease-in;
                }
                
                .educationCard::after {
