--- a/src/Components/NftEducation/Fundamentals/fundamentals.module.css
+++ b/src/Components/NftEducation/Fundamentals/fundamentals.module.css
@@ -1,6 +1,3 @@
-.fundamentalContainer {
-    background: #090909;
-}
 .fundamentalContent {
     display: flex;
     justify-content: center;
@@ -9,12 +6,22 @@
     margin: 3rem;
     color: #d6b400;
 }
-.fundamentalContainer h2 {
+.title {
     font-size: 3rem;
     color: transparent;
     -webkit-text-stroke: #d6b400 2px;
     text-transform: uppercase;
 }
-.fundamentalContainer p {
+.fundamentalContent p {
     margin: 2rem 0 2rem 0;
+}
+.canvas {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    border: none;
+    pointer-events: none;
 }
