--- a/src/Components/NftEducation/UseCases/use-cases.module.css
+++ b/src/Components/NftEducation/UseCases/use-cases.module.css
@@ -1,7 +1,3 @@
-.useCasesContainer {
-    background: #090909;
-    
-}
 .useCasesContent {
     display: flex;
     justify-content: center;
@@ -10,12 +6,23 @@
     margin: 3rem;
     color: #d6b400;
 }
-.useCasesContainer h2 {
+.useCasesContent h2 {
     font-size: 3rem;
     color: transparent;
     -webkit-text-stroke: #d6b400 2px;
     text-transform: uppercase;
 }
-.useCasesContainer p {
+.useCasesContent p {
     margin: 2rem 0 2rem 0;
+}
+
+.canvas {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    border: none;
+    pointer-events: none;
 }
