--- a/src/Components/NftEducation/Ownership/ownership.module.css
+++ b/src/Components/NftEducation/Ownership/ownership.module.css
@@ -1,13 +1,13 @@
-.ownershipContainer {
-    background: #090909;
-}
 .ownershipContent {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     margin: 3rem;
+    padding: 2rem;
     color: #d6b400;
+    background: #1b1b1bbb;
+    border-radius: 2%;
 }
 .ownershipContent h2 {
     font-size: 3rem;
