--- a/src/Components/NftEducation/Security/security.module.css
+++ b/src/Components/NftEducation/Security/security.module.css
@@ -4,7 +4,10 @@
     align-items: center;
     flex-direction: column;
     margin: 3rem;
+    padding: 2rem;
     color: #d6b400;
+    background: #1b1b1bbb;
+    border-radius: 2%;
 }
 .securityContent h2 {
     font-size: 3rem;
