--- a/src/Components/Homepage/WhoWeAre/presentation.module.css
+++ b/src/Components/Homepage/WhoWeAre/presentation.module.css
@@ -15,7 +15,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 4rem;
+            font-size: 1rem;
             color: transparent;
             -webkit-text-stroke: #d6b400 2px;
             text-transform: uppercase;
@@ -26,4 +26,9 @@
             align-items: center;
             -webkit-text-stroke: #d6b400 1px;
             margin: 1rem 2rem 1rem 2rem;
+        }
+        @media only screen and (min-width: 992px) {
+            .title {
+                font-size: 4rem;
+            }
         }
