--- a/src/Components/NftEducation/Fundamentals/fundamentals.module.css
+++ b/src/Components/NftEducation/Fundamentals/fundamentals.module.css
@@ -10,7 +10,7 @@
     border-radius: 2%;
 }
 .title {
-    font-size: 3rem;
+    font-size: 1rem;
     color: transparent;
     -webkit-text-stroke: #d6b400 2px;
     text-transform: uppercase;
@@ -27,4 +27,9 @@
     z-index: -1;
     border: none;
     pointer-events: none;
+}
+@media only screen and (min-width: 992px) {
+    .title {
+        font-size: 4rem;
+    }
 }
