--- a/src/Components/Homepage/WhoWeAre/presentation.module.css
+++ b/src/Components/Homepage/WhoWeAre/presentation.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    margin: 0 3rem 0 3rem;
     color: #d6b400;
     min-height: 100vh;
 }
