deleted unnecesary things to aling with client view of the future of the project

--- a/src/Components/Shared/Footer/footer.module.css
+++ b/src/Components/Shared/Footer/footer.module.css
@@ -17,5 +17,5 @@
     .copyright {
         padding-top: 2vh;
         color: transparent;
-        -webkit-text-stroke: #d6b400 1px;
+        -webkit-text-stroke: white 1px;
     }
