--- a/src/Components/Homepage/WhoWeAre/presentation.module.css
+++ b/src/Components/Homepage/WhoWeAre/presentation.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     flex-direction: column;
     margin: 0 3rem 0 3rem;
-    color: #d6b400;
+    color: white;
     min-height: 100vh;
 }
     .presentationContent{
@@ -18,14 +18,14 @@
             align-items: center;
             font-size: 2rem;
             color: transparent;
-            -webkit-text-stroke: #d6b400 2px;
+            -webkit-text-stroke: white 2px;
             text-transform: uppercase;
         }
         .infoW {
             display: flex;
             justify-content: center;
             align-items: center;
-            -webkit-text-stroke: #d6b400 1px;
+            -webkit-text-stroke: white 1px;
             margin: 1rem 2rem 1rem 2rem;
         }
         @media only screen and (min-width: 992px) {
