--- a/src/Components/Homepage/Header/header.module.css
+++ b/src/Components/Homepage/Header/header.module.css
@@ -1,14 +1,27 @@
 .headerPosition {
-    position: fixed;
     width: 100%;
 }
     .headerContent {
         display: flex;
+        justify-content: space-between;
         align-items: center;
         padding: 2rem;
-        color: #d6b400;
+        color: #fff;
     }
         .logo {
-            height: 8vh;
+            height: 10vh;
             cursor: pointer;
         }
+        .navLinks {
+            display: none;
+        }
+@media only screen and (min-width: 992px) {
+    .navLinks {
+        display: flex;
+    }
+    .navLinks li {
+        display: block;
+        padding-right: 3vw;
+        cursor: pointer;
+    }
+}
