--- a/src/Components/Homepage/WhoWeAre/presentation.module.css
+++ b/src/Components/Homepage/WhoWeAre/presentation.module.css
@@ -2,9 +2,14 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin: 0 3rem 0 3rem;
-    color: white;
     min-height: 100vh;
+    background: linear-gradient(
+        54deg,rgba(184, 148, 50, 0.95) 34%,rgba(243, 235, 235, 0.95)), url('../../../../public/bennu-icon.png');
+    background-repeat: no-repeat;
+    /* background-attachment: fixed; */
+    background-position: center;
+    min-height: 120vh;
+    background-size: cover;
 }
     .presentationContent{
         display: flex;
@@ -18,14 +23,14 @@
             align-items: center;
             font-size: 2rem;
             color: transparent;
-            -webkit-text-stroke: white 2px;
+            -webkit-text-stroke: black 2px;
             text-transform: uppercase;
         }
         .infoW {
             display: flex;
             justify-content: center;
             align-items: center;
-            -webkit-text-stroke: white 1px;
+            -webkit-text-stroke: black 1px;
             margin: 1rem 2rem 1rem 2rem;
         }
         @media only screen and (min-width: 992px) {
