--- a/src/Components/Homepage/Roadmap/roadmap.module.css
+++ b/src/Components/Homepage/Roadmap/roadmap.module.css
@@ -1,3 +1,24 @@
 .roadmap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 0.5rem;
     color: white;
 }
+    .title {
+        margin-bottom: 1rem;
+        padding: 1rem;
+        font-size: 2rem;
+        font-weight: bold;
+        border: 5px groove rgba(184, 148, 50, 0.95);
+        border-radius: 35%;
+    }
+    .roadmapContent {
+        padding: 2rem;
+        border: 1rem double rgba(184, 148, 50, 0.95);
+    }
+    .roadmapContent p{
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+    }
