almost finish project

--- a/src/Components/Homepage/FAQ/faq.module.css
+++ b/src/Components/Homepage/FAQ/faq.module.css
@@ -7,3 +7,14 @@
       min-height: 100vh;
       background-size: cover;
   }
+
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 3rem 0rem;
+  font-size: 2rem;
+  color: transparent;
+  -webkit-text-stroke: black 2px;
+  text-transform: uppercase;
+}
