--- a/src/Components/Homepage/Header/header.module.css
+++ b/src/Components/Homepage/Header/header.module.css
@@ -30,7 +30,27 @@
     }
     .navLinks li {
         display: block;
-        padding-right: 3vw;
+        margin-right: 3vw;
+        padding-bottom: 1vh;
         cursor: pointer;
+        background:
+        linear-gradient(
+          to right,
+          black,
+          black
+        ),
+        linear-gradient(
+          to right,
+          rgba(128, 102, 33, 0.95),
+          rgba(184, 148, 50, 0.95),
+          rgba(243, 235, 235, 0.95)
+      );
+      background-size: 100% 3px, 0 3px;
+      background-position: 100% 100%, 0 100%;
+      background-repeat: no-repeat;
+      transition: background-size 400ms;
+    }
+    .navLinks li:hover {
+        background-size: 0 3px, 100% 3px;
     }
 }
