--- a/src/Components/Homepage/Roadmap/roadmap.module.css
+++ b/src/Components/Homepage/Roadmap/roadmap.module.css
@@ -7,12 +7,27 @@
     color: white;
 }
     .title {
-        margin-bottom: 1rem;
+        display: flex;
+        margin: 5rem 0rem 1rem 0rem;
         padding: 1rem;
         font-size: 2rem;
-        font-weight: bold;
+            color: transparent;
+            -webkit-text-stroke: #fff 2px;
+            text-transform: uppercase;
         border: 5px groove rgba(184, 148, 50, 0.95);
         border-radius: 35%;
+    }
+    img {
+        margin-right: 1vw;
+    }
+    .info {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .info img {
+        padding: 2rem;
     }
     .roadmapContent {
         padding: 2rem;
@@ -21,4 +36,10 @@
     .roadmapContent p{
         font-size: 1.5rem;
         margin-bottom: 1rem;
+    }
+
+    @media only screen and (min-width: 992px) {
+       .info {
+           margin: 6rem;
+       }
     }
