--- a/src/Components/Shared/Footer/footer.module.css
+++ b/src/Components/Shared/Footer/footer.module.css
@@ -7,8 +7,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 5vh;
-    color: #d6b400;
+    padding: 1rem 0rem 4rem 0rem;
     background-color: black;
 }
     .logo {
