--- a/src/Components/Shared/Loading/loading.module.css
+++ b/src/Components/Shared/Loading/loading.module.css
@@ -3,8 +3,9 @@
     justify-content: center;
     align-items: center;
 }
-.modalHidden {
-    display: none;
+.modalContainerHidden {
+    opacity: 0;
+    transition: opacity 3s ease-in-out;
 }
   .modal {
       display: block; /* Hidden by default */
@@ -16,7 +17,6 @@
       height: 100%; /* Full height */
       overflow: auto; /* Enable scroll if needed */
       background-color: rgb(0,0,0); /* Fallback color */
-      background-color: rgb(0, 0, 0); /* Black w/ opacity */
     }
     .modalContent {
       display: flex;
