--- a/src/Components/Homepage/Header/header.module.css
+++ b/src/Components/Homepage/Header/header.module.css
@@ -11,7 +11,7 @@
         color: #fff;
     }
         .logo {
-            height: 10vh;
+            height: 4rem;
             cursor: pointer;
         }
         .navLinks {
