--- a/src/Components/Homepage/Roadmap/roadmap.module.css
+++ b/src/Components/Homepage/Roadmap/roadmap.module.css
@@ -5,26 +5,26 @@
     flex-direction: column;
     margin: 0.5rem;
     color: white;
+    background: linear-gradient(
+        54deg,rgba(0, 0, 0, 0.466) 34%,rgba(189, 165, 165, 0.486)), url('../../../../public/assets/img/la-del-mundo.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 120vh;
+    background-size: contain;
 }
-    .title {
-        display: flex;
-        margin: 5rem 0rem 1rem 0rem;
-        padding: 1rem;
-        font-size: 2rem;
-        text-transform: uppercase;
-        border: 5px groove rgba(184, 148, 50, 0.95);
-        border-radius: 35%;
-    }
-    img {
-        margin-right: 1vw;
-    }
-    .info {
+    .info1 {
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
         flex-direction: column;
     }
-    .info img {
+    .info2 {
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        flex-direction: column; 
+    }
+    .info1 img, .info2 img {
         padding: 2rem;
     }
     .roadmapContent {
@@ -37,7 +37,15 @@
     }
 
     @media only screen and (min-width: 992px) {
-       .info {
+       .info1, .info2 {
            margin: 6rem;
+
        }
+       .info1 {
+            width: 30%;
+       }
+       .info2 {
+            width:30%;
+            padding-left: 50vw;
+        }
     }
