--- a/src/Components/Homepage/Roadmap/Title/title.module.css
+++ b/src/Components/Homepage/Roadmap/Title/title.module.css
@@ -10,13 +10,14 @@
     align-items: center;
     margin: 5rem 0rem 1rem 0rem;
     padding: 1rem;
-    font-size: 2rem;
+    font-size: 3rem;
     text-transform: uppercase;
-    border: 5px groove rgba(184, 148, 50, 0.95);
-    border-radius: 35%;
     color: white;
    
 }
-img {
+.logo1 {
     margin-right: 1vw;
+}
+.logo2 {
+    margin-left: 1vw;
 }
