added qatar world cup background

--- a/src/Components/Homepage/Roadmap/roadmap.module.css
+++ b/src/Components/Homepage/Roadmap/roadmap.module.css
@@ -39,7 +39,7 @@
     @media only screen and (min-width: 992px) {
         .roadmap {
             background: linear-gradient(
-                54deg,rgba(0, 0, 0, 0.466) 34%,rgba(189, 165, 165, 0.486)), url('../../../../public/assets/img/la-del-mundo.png');
+                54deg,rgba(0, 0, 0, 0.466) 34%,rgba(189, 165, 165, 0.486)), url('../../../../public/assets/img/FIFA\ World\ Cup\ Qatar\ 2022\ Logo\ \(PNG-1080p\)\ -\ FileVector69.webp');
                 background-repeat: no-repeat;
                 background-position: center;
                 min-height: 120vh;
