--- a/src/Components/Homepage/Roadmap/Title/title.module.css
+++ b/src/Components/Homepage/Roadmap/Title/title.module.css
@@ -2,12 +2,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
 }
 .title {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     margin: 5rem 0rem 1rem 0rem;
     padding: 1rem;
     font-size: 3rem;
@@ -16,8 +16,14 @@
    
 }
 .logo1 {
-    margin-right: 1vw;
+    margin-right: 0.5vw;
 }
 .logo2 {
-    margin-left: 1vw;
+    margin-left: 0.5vw;
+}
+
+@media only screen and (min-width: 992px) {
+    .title{
+        flex-direction: row;
+    }
 }
