--- a/src/Components/Homepage/Roadmap/roadmap.module.css
+++ b/src/Components/Homepage/Roadmap/roadmap.module.css
@@ -42,7 +42,7 @@
     @media only screen and (min-width: 992px) {
         .roadmap {
             background: linear-gradient(
-                54deg,rgba(0, 0, 0, 0.466) 34%,rgba(189, 165, 165, 0.486)), url('../../../../public/assets/img/qatar-wc.png');
+                54deg,rgba(58, 57, 57, 0.733) 34%,rgba(128, 110, 110, 0.685)), url('../../../../public/assets/img/-1_orig\ \(7\).jpg');
                 background-repeat: no-repeat;
                 background-position: center;
                 min-height: 120vh;
