--- a/src/Components/Homepage/Roadmap/roadmap.module.css
+++ b/src/Components/Homepage/Roadmap/roadmap.module.css
@@ -12,17 +12,11 @@
     min-height: 120vh;
     background-size: contain;
 }
-    .info1 {
+    .info1, .info2 {
         display: flex;
         justify-content: center;
-        align-items: flex-start;
+        align-items: center;
         flex-direction: column;
-    }
-    .info2 {
-        display: flex;
-        justify-content: center;
-        align-items: flex-end;
-        flex-direction: column; 
     }
     .arrows {
         display:none;
@@ -42,16 +36,23 @@
     @media only screen and (min-width: 992px) {
         .roadmap {
             background: linear-gradient(
-                54deg,rgba(58, 57, 57, 0.733) 34%,rgba(128, 110, 110, 0.685)), url('../../../../public/assets/img/-1_orig\ \(12\).jpg');
+                54deg,rgba(58, 57, 57, 0.733) 34%,rgba(128, 110, 110, 0.685)), url('../../../../public/assets/img/qatar-wc.png');
                 background-repeat: no-repeat;
                 background-position: center;
                 min-height: 120vh;
                 background-size: contain;
         }
        .info1, .info2 {
-           margin: 1rem;
-    }
+           width: 30%;
+        }
+        .fields2 {
+            display: flex;
+            flex-direction: row-reverse;
+        }
     .arrows {
         display: block;
+        height: auto;
+        width: 100%;
+        size: 25rem;
     }
 }
