--- a/src/Components/Homepage/Roadmap/roadmap.module.css
+++ b/src/Components/Homepage/Roadmap/roadmap.module.css
@@ -36,8 +36,8 @@
     @media only screen and (min-width: 992px) {
         .roadmap {
             background: linear-gradient(
-                54deg,rgba(0, 0, 0, 0.315) 34%,rgba(56, 56, 56, 0.233)), url('../../../../public/assets/img/qatar-wc.png');
-                background-repeat: repeat;
+                54deg,rgba(0, 0, 0, 0.466) 34%,rgba(56, 56, 56, 0.493)), url('../../../../public/assets/img/-1_orig\ \(13\).jpg');
+                background-repeat: no-repeat;
                 background-position: center;
                 min-height: 120vh;
                 background-size: contain;
