--- a/src/Components/Homepage/Roadmap/roadmap.module.css
+++ b/src/Components/Homepage/Roadmap/roadmap.module.css
@@ -12,7 +12,7 @@
     min-height: 120vh;
     background-size: contain;
 }
-    .info1, .info2 {
+    .info1, .info2, .info3, .info4 {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -22,7 +22,7 @@
     .arrows {
         display:none;
     }
-    .info1 img, .info2 img {
+    .info1 img, .info2 img, .info3 img, .info4 img {
         padding: 2rem;
     }
     .roadmapContent p{
@@ -32,24 +32,36 @@
 
     @media only screen and (min-width: 992px) {
         .roadmap {
-            background: linear-gradient(
-                54deg,rgba(0, 0, 0, 0.466) 34%,rgba(56, 56, 56, 0.493)), url('../../../../public/assets/img/-1_orig\ \(13\).jpg');
+            background: url('../../../../public/assets/img/-1_orig\ \(21\).jpg');
                 background-repeat: no-repeat;
                 background-position: center;
                 min-height: 120vh;
                 background-size: contain;
         }
-       .info1, .info2 {
-           width: 30%;
+        .info1, .info3 {
+            width:30%;
         }
+        .info1 {
+            margin-top: 10rem;
+            padding-bottom: 4rem;
+        }
+        .info2 {
+           flex-direction: row;
+           margin-top: 5rem;
+           padding-top: 8rem;
+           width: 40%;
+        }
+        .info3{
+            margin-bottom: 3rem;
+        }
+        .info4 {
+            margin-bottom: 6rem;
+            padding-bottom: 2rem;
+            width:30%;
+        }
+
         .fields2 {
             display: flex;
             flex-direction: row-reverse;
         }
-    .arrows {
-        display: block;
-        height: auto;
-        width: 100%;
-        size: 25rem;
-    }
 }
